--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
 
         <main id="main-doc">
             <section class="main-section" id="">
-                <header></header>
+                <header>Introduction</header>
             </section>
 
             <section class="main-section" id="">
-                    <header></header>
+                    <header>What you should already know</header>
             </section>
 
             <section class="main-section" id="">
-                    <header></header>
+                    <header>JavaScript and Java</header>
             </section>
 
             <section class="main-section" id="">
-                    <header></header>
+                    <header>Hello world</header>
             </section>
 
             <section class="main-section" id="">
-                    <header></header>
+                    <header>Variables</header>
             </section>
 
             <section class="main-section" id="">
-                <header></header>
+                <header>Declaring variables</header>
             </section>
 
             <section class="main-section" id="">
-                    <header></header>
+                    <header>Variable scope</header>
             </section>
 
             <section class="main-section" id="">
-                    <header></header>
+                    <header>Global variables</header>
             </section>
 
             <section class="main-section" id="">
