--- a/index.html
+++ b/index.html
@@ -47,27 +47,27 @@
             </section>
 
             <section class="main-section" id="">
-                    <header></header>
+                    <header>Constants</header>
             </section>
             
             <section class="main-section" id="">
-                    <header></header>
+                    <header>Data types</header>
             </section>
 
             <section class="main-section" id="">
-                    <header></header>
+                    <header>if...else statement</header>
             </section>
 
             <section class="main-section" id="">
-                    <header></header>
+                    <header>while statement</header>
             </section>
 
             <section class="main-section" id="">
-                    <header></header>
+                    <header>Function declarations</header>
             </section>
             
             <section class="main-section" id="">
-                    <header></header>
+                    <header>Reference</header>
             </section>
         </main>
     </div>
