--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <header>JS Documentation</header>
             <ul>
                 <li><a href="#introduction">Introduction</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#you_should_know">What you should already know</a></li>
+                <li><a href="#javascript_and_java">JavaScript and Java</a></li>
+                <li><a href="#hello_world">Hello world</a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
@@ -34,15 +34,15 @@
                 <header>Introduction</header>
             </section>
 
-            <section class="main-section" id="">
+            <section class="main-section" id="you_should_know">
                     <header>What you should already know</header>
             </section>
 
-            <section class="main-section" id="">
+            <section class="main-section" id="javascript_and_java">
                     <header>JavaScript and Java</header>
             </section>
 
-            <section class="main-section" id="">
+            <section class="main-section" id="hello_world">
                     <header>Hello world</header>
             </section>
 
