--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 <li><a href="#you_should_know">What you should already know</a></li>
                 <li><a href="#javascript_and_java">JavaScript and Java</a></li>
                 <li><a href="#hello_world">Hello world</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#variables">Variables</a></li>
+                <li><a href="#declaring_variables">Declaring variables</a></li>
+                <li><a href="#variable_scope">Variable scope</a></li>
+                <li><a href="#global_variables">Global variables</a></li>
+                <li><a href="#constants">Constants</a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
                 <li><a href="#"></a></li>
@@ -46,19 +46,19 @@
                     <header>Hello world</header>
             </section>
 
-            <section class="main-section" id="">
+            <section class="main-section" id="variables">
                     <header>Variables</header>
             </section>
 
-            <section class="main-section" id="">
+            <section class="main-section" id="declaring_variables">
                 <header>Declaring variables</header>
             </section>
 
-            <section class="main-section" id="">
+            <section class="main-section" id="variable_scope">
                     <header>Variable scope</header>
             </section>
 
-            <section class="main-section" id="">
+            <section class="main-section" id="global_variables">
                     <header>Global variables</header>
             </section>
 
