--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <li><a href="#variable_scope">Variable scope</a></li>
                 <li><a href="#global_variables">Global variables</a></li>
                 <li><a href="#constants">Constants</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#data_types">Data types</a></li>
+                <li><a href="#if_else">If...else statement</a></li>
+                <li><a href="#while_statement">While statement</a></li>
+                <li><a href="#function_declarations">Function declarations</a></li>
+                <li><a href="#reference">Reference</a></li>
             </ul>
         </nav>
 
@@ -62,27 +62,27 @@
                     <header>Global variables</header>
             </section>
 
-            <section class="main-section" id="">
+            <section class="main-section" id="constants">
                     <header>Constants</header>
             </section>
             
-            <section class="main-section" id="">
+            <section class="main-section" id="data_types">
                     <header>Data types</header>
             </section>
 
-            <section class="main-section" id="">
+            <section class="main-section" id="if_else">
                     <header>if...else statement</header>
             </section>
 
-            <section class="main-section" id="">
+            <section class="main-section" id="while_statement">
                     <header>while statement</header>
             </section>
 
-            <section class="main-section" id="">
+            <section class="main-section" id="function_declarations">
                     <header>Function declarations</header>
             </section>
             
-            <section class="main-section" id="">
+            <section class="main-section" id="reference">
                     <header>Reference</header>
             </section>
         </main>
