--- a/index.html
+++ b/index.html
@@ -5,33 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <title>Document</title>
+    <title>Technical Document</title>
 </head>
 <body>
     <div id="page-wrapper">
         <nav id="navbar">
             <header>JS Documentation</header>
             <ul>
-                <li><a href="#introduction">Introduction</a></li>
-                <li><a href="#you_should_know">What you should already know</a></li>
-                <li><a href="#javascript_and_java">JavaScript and Java</a></li>
-                <li><a href="#hello_world">Hello world</a></li>
-                <li><a href="#variables">Variables</a></li>
-                <li><a href="#declaring_variables">Declaring variables</a></li>
-                <li><a href="#variable_scope">Variable scope</a></li>
-                <li><a href="#global_variables">Global variables</a></li>
-                <li><a href="#constants">Constants</a></li>
-                <li><a href="#data_types">Data types</a></li>
-                <li><a href="#if_else">If...else statement</a></li>
-                <li><a href="#while_statement">While statement</a></li>
-                <li><a href="#function_declarations">Function declarations</a></li>
-                <li><a href="#reference">Reference</a></li>
+                <li><a class="nav-link" href="#introduction">Introduction</a></li>
+                <li><a class="nav-link" href="#you_should_know">What you should already know</a></li>
+                <li><a class="nav-link" href="#javascript_and_java">JavaScript and Java</a></li>
+                <li><a class="nav-link" href="#hello_world">Hello world</a></li>
+                <li><a class="nav-link" href="#variables">Variables</a></li>
+                <li><a class="nav-link" href="#declaring_variables">Declaring variables</a></li>
+                <li><a class="nav-link" href="#variable_scope">Variable scope</a></li>
+                <li><a class="nav-link" href="#global_variables">Global variables</a></li>
+                <li><a class="nav-link" href="#constants">Constants</a></li>
+                <li><a class="nav-link" href="#data_types">Data types</a></li>
+                <li><a class="nav-link" href="#if_else">If...else statement</a></li>
+                <li><a class="nav-link" href="#while_statement">While statement</a></li>
+                <li><a class="nav-link" href="#function_declarations">Function declarations</a></li>
+                <li><a class="nav-link" href="#reference">Reference</a></li>
             </ul>
         </nav>
 
         <main id="main-doc">
             <section class="main-section" id="introduction">
                 <header>Introduction</header>
+                <article>
+                    <p>
+                            JavaScript is a cross-platform, object-oriented scripting language. 
+                            It is a small and lightweight language. Inside a host environment (for example, a web browser), 
+                            JavaScript can be connected to the objects of its environment to provide programmatic control over them.
+                    </p>
+                    <p>
+                            JavaScript contains a standard library of objects, such as Array, Date, 
+                            and Math, and a core set of language elements such as operators, control structures, 
+                            and statements. Core JavaScript can be extended for a variety of purposes 
+                            by supplementing it with additional objects; for example:
+                    </p>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </article>
             </section>
 
             <section class="main-section" id="you_should_know">
