--- a/index.html
+++ b/index.html
@@ -300,10 +300,11 @@
                             <p>
                                     You may also compound the statements using else if to have multiple conditions tested in sequence, as follows:
                             </p>
-                            <code
-                              >if (condition_1) { statement_1; } else if (condition_2) { statement_2;
-                              } else if (condition_n) { statement_n; } else { statement_last; }
-                            </code>
+                            <pre><code>
+                                        if (condition_1) { statement_1; } else if (condition_2) { statement_2;
+                                        } else if (condition_n) { statement_n; } else { statement_last; }
+                                    </code></pre>
+                            
                             <p>
                                     In the case of multiple conditions only the first logical condition which evaluates to true will be executed. 
                                     To execute multiple statements, group them within a block statement ({ ... }) . In general, it's good practice 
@@ -322,10 +323,10 @@
                                     It is advisable to not use simple assignments in a conditional expression, because the assignment can be confused 
                                     with equality when glancing over the code. For example, do not use the following code:
                             </p>
-                            <code>if (x = y) { /* statements here */ }</code>
+                            <pre><code>if (x = y) { /* statements here */ }</code></pre>
                             <p>If you need to use an assignment in a conditional expression, 
                                 a common practice is to put additional parentheses around the assignment. For example:</p>
-                            <code>if ((x = y)) { /* statements here */ }</code>
+                            <pre><code>if ((x = y)) { /* statements here */ }</code></pre>
                         </article>
             </section>
 
@@ -336,7 +337,7 @@
                                 A while statement executes its statements as long as a specified 
                                 condition evaluates to true. A while statement looks as follows:
                         </p>
-                        <code>while (condition) statement</code>
+                        <pre><code>while (condition) statement</code></pre>
                         <p>
                                 If the condition becomes false, statement within the loop stops 
                                 executing and control passes to the statement following the loop.
@@ -350,7 +351,7 @@
                             to group those statements.</p>
                         <p>Example:</p>
                         <p>The following while loop iterates as long as n is less than three:</p>
-                        <code>var n = 0; var x = 0; while (n < 3) { n++; x += n; }</code>
+                        <pre><code>var n = 0; var x = 0; while (n < 3) { n++; x += n; }</code></pre>
                         <p>With each iteration, the loop increments n and adds that value to x. 
                             Therefore, x and n take on the following values:</p>
                             <ul>
@@ -379,16 +380,16 @@
                             <p>
                                     For example, the following code defines a simple function named square:
                             </p>
-                            <code>
+                            <pre><code>
                                     function square(number) { return number * number; }
-                            </code>
+                            </code></pre>
                             <p>
                                     The function square takes one argument, called number. 
                                     The function consists of one statement that says to return 
                                     the argument of the function (that is, number) multiplied by itself. 
                                     The return statement specifies the value returned by the function.
                             </p>
-                            <code>return number * number;</code>
+                            <pre><code>return number * number;</code></pre>
                             <p>
                                     Primitive parameters (such as a number) are passed to functions by value; 
                                     the value is passed to the function, but if the function changes 
